--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^17.0.0",
+    "axios": "^0.21.1",
+    "firebase": "^7.19.1",
+    "firebase-tools": "^11.3.0",
+    "react": "^17.0.2",
     "react-currency-format": "^1.1.0",
-    "react-dom": "^17.0.0",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
